--- a/src/index.css
+++ b/src/index.css
@@ -224,3 +224,19 @@ select:focus + .focus {
   background-color: #ccc;
   cursor: not-allowed;
 }
+
+.reset-filters-btn {
+    background-color: #ff6347;
+    color: white;
+    padding: 10px 20px;
+    margin-top: 10px;
+    border: none;
+    cursor: pointer;
+    font-size: 16px;
+    border-radius: 5px;
+  }
+  
+  .reset-filters-btn:hover {
+    background-color: #ff4500;
+  }
+  
