--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,7 @@ img {
     --bg-offset: hsl(0, 0%, 100%);
     --text: hsl(200, 15%, 8%);
     --gray: hsl(0, 0%, 52%);
+    --lightgray: hsl(0, 0%, 85%);
     --border: rgba(0, 0, 0, 0.1);
 }
 ul,
@@ -65,6 +66,7 @@ h2 {
     background-color: var(--bg-offset);
     margin: 7px;
     padding: 5px;
+    padding-bottom: 2px;
     box-shadow: 0px 2px 4px var(--border);
     transition: all 150ms cubic-bezier(0.075, 0.82, 0.165, 1);
 
@@ -82,26 +84,51 @@ h2 {
     }
 }
 .card-image {
-    max-height: 150px;
+    max-height: 220px;
     overflow: hidden;
+    padding: 2px 2px;
 }
 .card-image img {
+  
     margin-top: 0px;
     min-height: 100%;
     width: 100%;
     object-fit: cover;
     object-position: center;
+    
+    -webkit-touch-callout: none !important;
+    -webkit-user-select: none !important;
+    -webkit-user-drag: none !important;
+    -khtml-user-select: none !important;
+    -moz-user-select: none !important;
+    -ms-user-select: none !important;
+    user-select: none !important;
+      
 }
-.card-content {
-    padding: 15px 10px;
 
-    h2 {
-        display: -webkit-box;
-        -webkit-line-clamp: 2;
-        -webkit-box-orient: vertical;
-        overflow: hidden;
-    }
+
+
+.card-content {
+  padding: 15px 10px;
+  display: block;
+  opacity: 1;
+  max-height: 500px;
+  overflow: hidden;
+  transform: scaleY(1);
+  transform-origin: top;
+  transition: opacity 0.5s ease-in-out, max-height 0.5s ease-in-out, padding 0.5s ease-in-out, transform 0.5s ease-in-out;
 }
+
+.card-content.hide {
+  opacity: 0;
+  max-height: 0;
+  padding: 0px 10px;
+  transform: scaleY(0.9);
+  pointer-events: none; /* Prevents selection & interaction */
+  user-select: none; /* Prevents text selection */
+  
+}
+
 .card-list {
     margin-top: 10px;
 
@@ -194,31 +221,90 @@ h2 {
 
   }
   
+.multiple-buttons {
+  width: 100%;
+  max-height: 7ch;
   
+  cursor: pointer;
+  
+  background-color: transparent;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  grid-gap: 8px;
+  position: relative;
+}  
 
 .reset-filters-btn {
-  background-color: #ff6347;
-  max-width: 20ch;
-  min-width: 10ch;
-  color: white;
-  object-position: center;
-  padding: 10px 20px;
-  border: none;
+  
+  background-color: var(--lightgray);
+  width: 50%;
+  max-width: 150px;
+  
+  
+  margin-right: auto;
+  height: 100%;
+  color: var(--gray);
+  border: 1px solid var(--border);
+  
   cursor: pointer;
+  position: relative;
+  padding: 1.3em 0.5em;
+  box-shadow: 0px 4px 6px var(--border);
+  transition: all 0.4s cubic-bezier(0.215, 0.61, 0.355, 1);
   font-size: 14px;
   border-radius: 4px;
+  
 }
 
 .reset-filters-btn:hover {
-  background-color: #ff4500;
+  box-shadow: 0px 0px 0px var(--border);
 }  
+
+.toggle-content-btn {
+  margin-left: auto;
+  width: 50%;
+  max-width: 150px;
+  
+  height: 100%;
+  
+  color: var(--gray);
+  border: 1px solid var(--border);
+  
+  cursor: pointer;
+  position: relative;
+  padding: 1.3em 0.5em;
+  box-shadow: 0px 4px 6px var(--border);
+  transition: box-shadow 0.4s cubic-bezier(0.215, 0.61, 0.355, 1);
+  font-size: 14px;
+  border-radius: 4px;
+  background-size: 100% 200%;
+  background-image: linear-gradient(to top, var(--lightgray) 50%, var(--gray) 50%);
+  background-position: 0 -100%; 
+  
+  transition: background-position 0.3s ease-in-out;
+  
+  
+}
+
+.toggle-content-btn:hover {
+  box-shadow: 0px 0px 0px var(--border);
+}
+
+.toggle-content-btn.active {
+  background-position: 0 0;
+  color: var(--lightgray);
+}
+
+
+
 
 
 /* Header toggle button */
 .header-toggle-btn {
     position: fixed;
-    top: 20px;
-    left: 20px;
+    top: 15px;
+    left: 15px;
     background: transparent;
     border: none;
     display: flex;
@@ -269,7 +355,7 @@ h2 {
     top: -100%; /* Initially hidden */
     padding-left: 0px;
     padding-right: 0px;
-    background: #fff;
+    background: transparent;
     
     transition: top 0.3s ease;
     z-index: 10;
@@ -290,7 +376,7 @@ h2 {
   
   .content {
     margin-top: 5px;
-    transition: margin-top 0.3s ease;
+    transition: margin-top 0.4s ease;
   }
   
   .content.shifted {
@@ -301,6 +387,9 @@ h2 {
     .header {
       grid-template-columns: repeat(2, 1fr); /* 2 items per row on medium screens */
   }
+    .reset-filters-btn {
+      max-height: 100%;
+    }
     .content.shifted {
     margin-top: 110px;
   }
