--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,7 @@ img {
 :root {
     --bg: hsl(0, 0%, 98%);
     --bg-offset: hsl(0, 0%, 100%);
+    --bg-overlay: rgba(0, 0, 0, 0.5);
     --text: hsl(200, 15%, 8%);
     --gray: hsl(0, 0%, 52%);
     --lightgray: hsl(0, 0%, 85%);
@@ -56,13 +57,13 @@ h2 {
 
 .header {
   width: 80%;
+  max-width: 1170px;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-gap: 8px;
   justify-content: space-between;
   position: fixed; 
   top: -100%; /* Initially hidden */
-  
   transition: top 0.3s ease;
   z-index: 6;
   margin: 10px 0px;
@@ -433,7 +434,7 @@ h2 {
   z-index: 10;
   position: fixed;
   inset: 0;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: var(--bg-overlay);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -455,8 +456,7 @@ h2 {
 }
 
 
-/* Close Button */
-.close-button {
+.info-close-button {
   margin-top: 10px;
   background-color: #dc3545;
   color: white;
@@ -466,7 +466,7 @@ h2 {
   cursor: pointer;
 }
 
-.close-button:hover {
+.info-close-button:hover {
   background-color: #c82333;
 }
 
@@ -544,15 +544,16 @@ h2 {
   
 
 
-  
+
 
   .modal-overlay {
+    z-index: 15;
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: var(--bg-overlay);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -566,25 +567,95 @@ h2 {
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
     max-width: 90%;
     max-height: 90%;
+    min-width: 50%;
+    min-height: 50%;
   }
   
   .modal-image {
+
+    aspect-ratio: auto;
     max-width: 100%;
-    max-height: 80vh;
+    height: auto;
+    max-height: 90vh;
     border-radius: 8px;
+   
+    height:auto;
+  }
+  .modal-image.loading {
+    display: none;
+  }
+
+  .modal-text {
+    position: absolute;
+    bottom: 1%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: none;
+    border: none;
+    color: var(--gray);
+    font-size: 24px;
+    text-align: center;
+    padding: 0px;
+    -webkit-user-select: none; /* Safari */
+    -ms-user-select: none; /* IE 10 and IE 11 */
+    user-select: none; /* Standard syntax */
+  }
+
+  .modal-text.loading {
+    color: red;
   }
   
   .close-button {
     position: absolute;
-    top: 10px;
+    top: 5px;
     right: 10px;
     background: none;
     border: none;
     font-size: 24px;
     cursor: pointer;
     color: #555;
+    -webkit-user-select: none; /* Safari */
+    -ms-user-select: none; /* IE 10 and IE 11 */
+    user-select: none; /* Standard syntax */
   }
   
   .close-button:hover {
     color: #222;
   }
+
+
+  .prev-button,
+  .next-button {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background: none;
+    border: none;
+    color: gray;
+    font-size: 40px;
+    cursor: pointer;
+    padding: 10px;
+    transition: color 0.3s ease;
+    -webkit-user-select: none; /* Safari */
+    -ms-user-select: none; /* IE 10 and IE 11 */
+    user-select: none; /* Standard syntax */
+    
+  }
+
+  .prev-button {
+    left: -30px;
+  }
+
+  .next-button {
+    right: -30px;
+  }
+
+  .prev-button:hover,
+  .next-button:hover {
+    color: black;
+  }
+
+
+
+  
+  
